log
Thu 11 May 2023 04:10:06 PM UTC: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
559fa05
Thu 11 May 2023 04:11:12 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:34:28: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   34 |   return (*(pq->heapArray)).data;
      |          ~~~~~~~~~~~~~~~~~~^~~~~
heap.c:32:6: note: declared here
   32 | void heap_pop(Heap* pq){
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
91f8521
Thu 11 May 2023 04:11:28 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
bb3876c
